# chomper

./: .gitmodules  CMakeLists.txt
assets/shaders/: fragment.glsl  sprite.frag  sprite.vert  vertex.glsl
src/: common.c  common.h  main.c  renderer.c  renderer.h  shader.c  shader.h  sprite_renderer.c  sprite_renderer.h  texture.c  texture.h  window.c  window.h
src/rendering/: rendering.h  shader.h  sprite_renderer.c  sprite_renderer.h  texture.c  texture.h
